name:                pnganim
version:             0.1.0.0
synopsis:            Png + JavaScript animation tool
description:         Creates JavaScript animated PNG from list of PNG frames
homepage:            http://github.com/mvoidex/pnganim
license:             BSD3
license-file:        LICENSE
author:              Alexandr `Voidex` Ruchkin
maintainer:          voidex@live.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules:
  build-depends:
  default-language: Haskell2010

executable pnganim
  main-is: pnganim.hs
  hs-source-dirs: tools
  -- other-modules:       
  build-depends:
    base == 4.6.*
  default-language:    Haskell2010
