name:                pnganim
version:             0.1.0.0
synopsis:            Png + JavaScript animation tool
description:         Creates JavaScript animated PNG from list of PNG frames
homepage:            http://github.com/mvoidex/pnganim
license:             BSD3
license-file:        LICENSE
author:              Alexandr `Voidex` Ruchkin
maintainer:          voidex@live.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    Pnganim
    Pnganim.Image
    Pnganim.Area
    Pnganim.Types
  build-depends:
    base == 4.6.*,
    base-unicode-symbols == 0.2.*,
    bytestring == 0.10.*,
    JuicyPixels == 3.1.*,
    containers == 0.5.*,
    mtl == 2.1.*,
    vector == 0.10.*
  default-language: Haskell2010
  default-extensions: UnicodeSyntax

executable pnganim
  main-is: pnganim.hs
  hs-source-dirs: tools
  -- other-modules:       
  build-depends:
    base == 4.6.*
  default-language:    Haskell2010
